-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.9.2
-
None
-
Windows 10, MSVC 2017, CMake 3.15
-
-
93ec10754f6186b0331b52cb9e96ad3f4341af91 (qt-creator/qt-creator/4.11)
When setting "unusual" compiler options in a CMake project, either by setting CMAKE_CXX_FLAGS or through add_compile_options, code highlight breaks.
This has been tested with /experimental:external and /justamadeupoption, both produced the same result. Other flags such as /W0 don't break code highlighting.
See screenshots below for reference.
Possibly related to QTCREATORBUG-18768