CppTools: Make code model on "cl" mode more robust

Unknown command line options starting with / are now transformed
into commands starting with -, which will cause unknown commands
warnings in libclang.

The / commands cause errors because they are treated as missing
files.

Fixes: QTCREATORBUG-22871
Change-Id: I75f7878ab6a7951df24c954ccff1c298ea65f839
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>